Finished form; corrected logo alignment in mobile header

--- a/css/main.css
+++ b/css/main.css
@@ -182,9 +182,10 @@ header .content-wrapper {
 header .logo-div {
   display: flex;
   height: 42px;
-  margin: 15px 0 10px 0;
+  margin: 15px 0 15px 0;
   object-fit: cover;
   text-align: center;
+  align-items: center;
 }
 
 #logo {
@@ -300,7 +301,6 @@ aside {
   color: #e2e3ed;
 }
 aside .content-wrapper {
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,16 +315,10 @@ aside h3 {
 aside p {
   margin: 8px 0 30px 0;
 }
+
 aside input {
   height: 50px;
-  
 }
-
-/* aside {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-} */
 
 .form-description, .form {
   display: flex;
@@ -332,22 +326,21 @@ aside input {
   align-items: center;
   flex-flow: row wrap;
   width: 89%;
-  
 }
 
 .form input {
-  width: 320px;
   width: 100%;
-  
 }
 
 .form input[type=text] {
-  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
   font-style: oblique;
   background-color: #e1e2ea;
   border: none;
   margin: 18px 0;
   color: #9d9ea4;
+  padding-left: 1em;
+  
 }
 
 .form input[type=button] {
@@ -357,6 +350,7 @@ aside input {
   color: #e1e2ea;
   border: none;
   text-transform: uppercase;
+  font-size: 1.125em;
 }
 
 /* -- FEATURES -- */
